backend/backend_errors_v2.txt
    Checking grapes-backend v0.1.0 (D:\2-Mozakra\Projects\GP-Project\Grapes\grapes-editor\backend)
warning: unused import: `Serialize`
 --> src\routes\project.rs:7:26
  |
7 | use serde::{Deserialize, Serialize};
  |                          ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `StyleValue`
  --> src\schema\mod.rs:19:41
   |
19 | pub use block::{BlockSchema, BlockType, StyleValue};
   |                                         ^^^^^^^^^^

warning: unused import: `DataShape`
  --> src\schema\mod.rs:20:38
   |
20 | pub use api::{ApiSchema, HttpMethod, DataShape};
   |                                      ^^^^^^^^^

warning: unused imports: `FieldSchema`, `FieldType`, `RelationSchema`, and `RelationType`
  --> src\schema\mod.rs:21:39
   |
21 | pub use data_model::{DataModelSchema, FieldSchema, FieldType, RelationSchema, RelationType};
   |                                       ^^^^^^^^^^^  ^^^^^^^^^  ^^^^^^^^^^^^^^  ^^^^^^^^^^^^

warning: unused imports: `LogicNodeType`, `LogicNode`, and `TriggerType`
  --> src\schema\mod.rs:22:39
   |
22 | pub use logic_flow::{LogicFlowSchema, LogicNode, LogicNodeType, TriggerType};
   |                                       ^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^

warning: unused import: `VariableType`
  --> src\schema\mod.rs:24:36
   |
24 | pub use variable::{VariableSchema, VariableType};
   |                                    ^^^^^^^^^^^^

error[E0599]: no variant or associated item named `Custom` found for enum `BlockType` in the current scope
  --> src\routes\blocks.rs:50:25
   |
50 |         _ => BlockType::Custom(req.block_type.clone()),
   |                         ^^^^^^ variant or associated item not found in `BlockType`
   |
  ::: src\schema\block.rs:53:1
   |
53 | pub enum BlockType {
   | ------------------ variant or associated item `Custom` not found for this enum

For more information about this error, try `rustc --explain E0599`.
warning: `grapes-backend` (bin "grapes-backend") generated 6 warnings
error: could not compile `grapes-backend` (bin "grapes-backend") due to 1 previous error; 6 warnings emitted
